# Solar-energy

./: CA_ecr_prices.csv  Dockerfile  README.md  detailed_rate_OPENEI.json  pyproject.toml
app/: auth.py
app/api/: input_designs.csv  main.py  models.py
app/config/: .env  config.py  secrets_manager.py
app/models/: conn.py  dynamodb_orms.py  models.py  schemas.py
app/testing/: test_all_rds_models.py  test_components.py  test_conn.py  test_dynamodb.py  test_health.py  test_job_status.py  test_main.py  test_schemas.py  test_simulation_api.py  test_simulation_detailed_api.py  test_utilities_and_auth.py
batch_runs/: AXIA_design_ids.csv  ENFIN_design_ids.csv  assign_batteries.py  assign_batteries_axia_subset.py  assign_inverters.py  assign_modules.py  assign_modules_axia_subset.py  assign_system_design.py  assign_system_design_axia_subset.py  async_api_first_iteration.csv  check_components.py  check_components_axia_subset.py  execute.py
data/PySAM Downloaded Weather Files/: nsrdb_28.9790843_-98.2488084_psm3-tmy_60_tmy.csv  nsrdb_29.060278_-95.448756_psm3-tmy_60_tmy.csv  nsrdb_29.406268_-98.205835_psm3-tmy_60_tmy.csv  nsrdb_29.467462_-98.650574_psm3-tmy_60_tmy.csv  nsrdb_29.46958279999999_-95.5220554_psm3-tmy_60_tmy.csv  nsrdb_29.474708_-95.146774_psm3-tmy_60_tmy.csv  nsrdb_29.518074_-95.539808_psm3-tmy_60_tmy.csv  nsrdb_29.575784_-95.198496_psm3-tmy_60_tmy.csv  nsrdb_29.605602_-95.111904_psm3-tmy_60_tmy.csv  nsrdb_29.649779_-95.53878_psm3-tmy_60_tmy.csv  nsrdb_29.665889_-95.72977_psm3-tmy_60_tmy.csv  nsrdb_29.676482_-95.741412_psm3-tmy_60_tmy.csv  nsrdb_29.73158_-95.849765_psm3-tmy_60_tmy.csv  nsrdb_29.74002_-95.397693_psm3-tmy_60_tmy.csv  nsrdb_29.747582_-95.577352_psm3-tmy_60_tmy.csv  nsrdb_29.7978787_-95.8512512_psm3-tmy_60_tmy.csv  nsrdb_29.813823_-95.424302_psm3-tmy_60_tmy.csv  nsrdb_29.834289_-95.553499_psm3-tmy_60_tmy.csv  nsrdb_29.939408_-95.662583_psm3-tmy_60_tmy.csv  nsrdb_29.954991_-95.724798_psm3-tmy_60_tmy.csv  nsrdb_29.978096_-96.249498_psm3-tmy_60_tmy.csv  nsrdb_29.978246_-95.654583_psm3-tmy_60_tmy.csv  nsrdb_30.010042_-95.415774_psm3-tmy_60_tmy.csv  nsrdb_30.0156544_-95.78622899999999_psm3-tmy_60_tmy.csv  nsrdb_30.065778_-95.574098_psm3-tmy_60_tmy.csv  nsrdb_30.1187828_-95.56578630000001_psm3-tmy_60_tmy.csv  nsrdb_30.137022_-95.388398_psm3-tmy_60_tmy.csv  nsrdb_30.169178_-97.72924_psm3-tmy_60_tmy.csv  nsrdb_30.198216_-95.789328_psm3-tmy_60_tmy.csv  nsrdb_30.203578_-97.97656_psm3-tmy_60_tmy.csv  nsrdb_30.2189044_-95.8857431_psm3-tmy_60_tmy.csv  nsrdb_30.23726704700611_-95.7103967428325_psm3-tmy_60_tmy.csv  nsrdb_30.280719_-95.489177_psm3-tmy_60_tmy.csv  nsrdb_30.2920697_-95.5624868_psm3-tmy_60_tmy.csv  nsrdb_30.398909_-98.09055_psm3-tmy_60_tmy.csv  nsrdb_30.630405_-97.752299_psm3-tmy_60_tmy.csv  nsrdb_30.814433_-97.591411_psm3-tmy_60_tmy.csv  nsrdb_30.902003_-94.038133_psm3-tmy_60_tmy.csv  nsrdb_31.064415_-97.80616_psm3-tmy_60_tmy.csv  nsrdb_31.0681513_-97.9133914_psm3-tmy_60_tmy.csv  (+1030 more)
data/openEI_utility_rates/: 37.845403_-122.255993_PacificGas&ElectricCo.json  37.845403_-122.255993_PacificGas&ElectricCo_detailedrate.json  (+1 more)
debugging_scripts/: execute_single_id.py
geli/: aurora_components_db.py  aurora_solar_sim_api.py  pysam_batteries.py  pysam_inverters.py  pysam_lifetime.py  pysam_modules.py  pysam_pvsim.py  pysam_resources.py  pysam_solar_resources.py  pysam_system_design.py  runner.py
testing/: conftest.py  test_components_db.py  test_pv_batteries.py  test_pv_inverters.py  test_pv_modules.py  test_pv_runner.py  test_pv_system_design.py  test_pvsim.py  test_rds_params.py
(+9 files in other folders)
